[package]
name = "Node-Rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

mio = {version = "0.7", features = ["os-poll", "net"]}
structopt = { version = "0.3", features = [ "paw" ] }
ctrlc = { version = "3.0", features = ["termination"] }
